# cargo-pkgconfig

./: Cargo.toml  README.md
src/: main.rs
