[package]
name = "cargo-pkgconfig"
version = "0.1.2"
edition = "2021"
license = "MIT"
homepage = "https://github.com/microsoft/cargo-pkgconfig"
repository = "https://github.com/microsoft/cargo-pkgconfig"
description = "pkg-config like interface for exposing crate metadata to primitive build systems"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cargo_metadata = "0.14.1"
clap = { version = "3.0.12", features = ["cargo"] }
path-slash = "0.1.4"
